--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Code Louisville Student Portfolio</title>
 
     <link href="https://fonts.googleapis.com/css?family=Cabin|Roboto:400,700|Roboto+Condensed:400,700" rel="stylesheet">
@@ -68,7 +68,7 @@
 
         <div class="aboutme-content">
 
-            <img src="http://placekitten.com/600" alt="Profile Photo" class="aboutme-photo">
+            <img src="https://i.pinimg.com/564x/35/93/af/3593af170ae2cabd0998dcd2efb78738.jpg" alt="Profile Photo" class="aboutme-photo">
 
             <h2>About Me</h2>
 
